feat: added div to display the game's countdown timer

--- a/index.html
+++ b/index.html
@@ -238,15 +238,24 @@
               <div id="timer-score" class="row m-0 p-0">
 
                 <!-- Timer -->
-                <div class="col-6">
+                <div class="col-4">
                   <div id="timer-container" class="text-center d-flex justify-content-center m-0 p-0">
                     <p id="timer" class="bg-white rounded-bottom px-2 fs-3">01:00</p>
                     <!-- Use this to adjust countdown timer after user has clicked Start button -->
                   </div>
                 </div>
 
+                <!-- Countdown -->
+                <div class="col-4">
+                  <div id="countdown-container" class="text-center d-flex justify-content-center m-0 p-0">
+                    <p class="bg-white rounded-bottom px-2 fs-3">
+                      <span id="countdown">5</span>
+                    </p>
+                  </div>
+                </div>
+
                 <!-- Score -->
-                <div class="col-6">
+                <div class="col-4">
                   <div id="score-container" class="text-center d-flex justify-content-center m-0 p-0">
                     <p class="bg-white rounded-bottom px-2 fs-3">
                       Score: <span id="score">0 / 9</span>
