feat: adjusted styling for countdown timer

--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
                 <!-- Countdown -->
                 <div class="col-4">
                   <div id="countdown-container" class="text-center d-flex justify-content-center m-0 p-0">
-                    <p class="bg-white rounded-bottom px-2 fs-3">
-                      <span id="countdown">5</span>
+                    <p class="m-0 fs-1 fw-bold">
+                      <span id="countdown"></span>
                     </p>
                   </div>
                 </div>
