feat: changed all tile divs to buttons

--- a/index.html
+++ b/index.html
@@ -270,60 +270,60 @@
               <div class="row m-0 p-0">
                 <div class="col mx-auto m-0 mb-3 p-0">
                   <div id="c-tiles" class="grid-container m-0 p-0">
-                    <div class="tile" id="c-tile-1">
+                    <button class="tile" id="c-tile-1">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
-                    </div>
-                    <div class="tile" id="c-tile-2">
+                    </button>
+                    <button class="tile" id="c-tile-2">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
-                    </div>
-                    <div class="tile" id="c-tile-3">
+                    </button>
+                    <button class="tile" id="c-tile-3">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
-                    </div>
-                    <div class="tile" id="c-tile-4">
+                    </button>
+                    <button class="tile" id="c-tile-4">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
-                    </div>
-                    <div class="tile" id="c-tile-5">
+                    </button>
+                    <button class="tile" id="c-tile-5">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
-                    </div>
-                    <div class="tile" id="c-tile-6">
+                    </button>
+                    <button class="tile" id="c-tile-6">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
-                    </div>
-                    <div class="tile" id="c-tile-7">
+                    </button>
+                    <button class="tile" id="c-tile-7">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
-                    </div>
-                    <div class="tile" id="c-tile-8">
+                    </button>
+                    <button class="tile" id="c-tile-8">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
-                    </div>
-                    <div class="tile" id="c-tile-9">
+                    </button>
+                    <button class="tile" id="c-tile-9">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
-                    </div>
+                    </button>
                   </div>
                 </div>
               </div>
@@ -334,102 +334,102 @@
             <div id="player-area" class="row m-0 p-0">
               <div class="col m-0 my-lg-3 mx-md-3 p-0">
                 <div id="p-tiles" class="flex-container my-2 mx-auto p-0">
-                  <div class="tile m-1" id="p-tile-1">
+                  <button class="tile m-1" id="p-tile-1">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-2">
+                  </button>
+                  <button class="tile m-1" id="p-tile-2">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-3">
+                  </button>
+                  <button class="tile m-1" id="p-tile-3">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-4">
+                  </button>
+                  <button class="tile m-1" id="p-tile-4">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-5">
+                  </button>
+                  <button class="tile m-1" id="p-tile-5">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-6">
+                  </button>
+                  <button class="tile m-1" id="p-tile-6">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-7">
+                  </button>
+                  <button class="tile m-1" id="p-tile-7">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-8">
+                  </button>
+                  <button class="tile m-1" id="p-tile-8">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-9">
+                  </button>
+                  <button class="tile m-1" id="p-tile-9">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-10">
+                  </button>
+                  <button class="tile m-1" id="p-tile-10">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-11">
+                  </button>
+                  <button class="tile m-1" id="p-tile-11">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-12">
+                  </button>
+                  <button class="tile m-1" id="p-tile-12">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-13">
+                  </button>
+                  <button class="tile m-1" id="p-tile-13">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-14">
+                  </button>
+                  <button class="tile m-1" id="p-tile-14">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-15">
+                  </button>
+                  <button class="tile m-1" id="p-tile-15">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
-                  <div class="tile m-1" id="p-tile-16">
+                  </button>
+                  <button class="tile m-1" id="p-tile-16">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
-                  </div>
+                  </button>
                 </div>
               </div>
             </div>
