feat: added the correct 'type' attribute to all tiles/buttons

--- a/index.html
+++ b/index.html
@@ -270,55 +270,55 @@
               <div class="row m-0 p-0">
                 <div class="col mx-auto m-0 mb-3 p-0">
                   <div id="c-tiles" class="grid-container m-0 p-0">
-                    <button class="tile" id="c-tile-1">
+                    <button type="button" class="tile" id="c-tile-1">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
                     </button>
-                    <button class="tile" id="c-tile-2">
+                    <button type="button" class="tile" id="c-tile-2">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
                     </button>
-                    <button class="tile" id="c-tile-3">
+                    <button type="button" class="tile" id="c-tile-3">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
                     </button>
-                    <button class="tile" id="c-tile-4">
+                    <button type="button" class="tile" id="c-tile-4">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
                     </button>
-                    <button class="tile" id="c-tile-5">
+                    <button type="button" class="tile" id="c-tile-5">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
                     </button>
-                    <button class="tile" id="c-tile-6">
+                    <button type="button" class="tile" id="c-tile-6">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
                     </button>
-                    <button class="tile" id="c-tile-7">
+                    <button type="button" class="tile" id="c-tile-7">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
                     </button>
-                    <button class="tile" id="c-tile-8">
+                    <button type="button" class="tile" id="c-tile-8">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
                       </div>
                     </button>
-                    <button class="tile" id="c-tile-9">
+                    <button type="button" class="tile" id="c-tile-9">
                       <div class="t-inner flipped">
                         <div class="t-front"></div>
                         <div class="t-back"></div>
