feat: removed 9/18 player tiles to match computer tiles and adjusted margins and display method

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
               <!-- Computer Tiles -->
               <div class="row m-0 p-0">
-                <div class="col mx-auto m-0 mb-3 p-0">
+                <div class="col mx-auto m-0 mb-2 p-0">
                   <div id="c-tiles" class="grid-container m-0 p-0">
                     <button type="button" class="tile" id="c-tile-1">
                       <div class="t-inner flipped">
@@ -332,99 +332,57 @@
 
             <!-- Player Area -->
             <div id="player-area" class="row m-0 p-0">
-              <div class="col m-0 my-lg-3 mx-md-3 p-0">
-                <div id="p-tiles" class="flex-container my-2 mx-auto p-0">
-                  <button class="tile m-1" id="p-tile-1">
+              <div class="col mx-auto m-0 mt-2 mb-2 p-0">
+                <div id="p-tiles" class="grid-container m-0 p-0">
+                  <button class="tile" id="p-tile-1">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </button>
-                  <button class="tile m-1" id="p-tile-2">
+                  <button class="tile" id="p-tile-2">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </button>
-                  <button class="tile m-1" id="p-tile-3">
+                  <button class="tile" id="p-tile-3">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </button>
-                  <button class="tile m-1" id="p-tile-4">
+                  <button class="tile" id="p-tile-4">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </button>
-                  <button class="tile m-1" id="p-tile-5">
+                  <button class="tile" id="p-tile-5">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </button>
-                  <button class="tile m-1" id="p-tile-6">
+                  <button class="tile" id="p-tile-6">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </button>
-                  <button class="tile m-1" id="p-tile-7">
+                  <button class="tile" id="p-tile-7">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </button>
-                  <button class="tile m-1" id="p-tile-8">
+                  <button class="tile" id="p-tile-8">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </button>
-                  <button class="tile m-1" id="p-tile-9">
-                    <div class="t-inner flipped">
-                      <div class="t-front"></div>
-                      <div class="t-back"></div>
-                    </div>
-                  </button>
-                  <button class="tile m-1" id="p-tile-10">
-                    <div class="t-inner flipped">
-                      <div class="t-front"></div>
-                      <div class="t-back"></div>
-                    </div>
-                  </button>
-                  <button class="tile m-1" id="p-tile-11">
-                    <div class="t-inner flipped">
-                      <div class="t-front"></div>
-                      <div class="t-back"></div>
-                    </div>
-                  </button>
-                  <button class="tile m-1" id="p-tile-12">
-                    <div class="t-inner flipped">
-                      <div class="t-front"></div>
-                      <div class="t-back"></div>
-                    </div>
-                  </button>
-                  <button class="tile m-1" id="p-tile-13">
-                    <div class="t-inner flipped">
-                      <div class="t-front"></div>
-                      <div class="t-back"></div>
-                    </div>
-                  </button>
-                  <button class="tile m-1" id="p-tile-14">
-                    <div class="t-inner flipped">
-                      <div class="t-front"></div>
-                      <div class="t-back"></div>
-                    </div>
-                  </button>
-                  <button class="tile m-1" id="p-tile-15">
-                    <div class="t-inner flipped">
-                      <div class="t-front"></div>
-                      <div class="t-back"></div>
-                    </div>
-                  </button>
-                  <button class="tile m-1" id="p-tile-16">
+                  <button class="tile" id="p-tile-9">
                     <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
