feat: added ID to Mode selection dropdown

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <!-- Mode Selector -->
               <div class="col-4 p-0 pt-2 text-center align-items-center justify-content-center" id="mode-selector">
               
-                <div class="dropdown">
+                <div id="mode" class="dropdown">
                   <button class="btn btn-sm btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Mode
                   </button>
