--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
               <!-- Computer Tiles -->
               <div class="row m-0 p-0">
-                <div class="col mx-auto m-0 mb-2 p-0">
+                <div class="col mx-auto my-2 p-0">
                   <div id="c-tiles" class="grid-container m-0 p-0">
                     <button type="button" class="tile" id="c-tile-1">
                       <div class="t-inner flipped">
