feat: adjusted column widths for timer-score area

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <div id="timer-score" class="row m-0 p-0">
 
                 <!-- Timer -->
-                <div class="col-4 p-0">
+                <div class="col-5 p-0">
                   <div id="timer-container" class="text-center d-flex justify-content-center m-0 p-0">
                     <p id="timer" class="bg-white rounded-bottom px-2 fs-3">01:00</p>
                     <!-- Use this to adjust countdown timer after user has clicked Start button -->
@@ -246,7 +246,7 @@
                 </div>
 
                 <!-- Countdown -->
-                <div class="col-4 p-0">
+                <div class="col-2 p-0">
                   <div id="countdown-container" class="text-center d-flex justify-content-center m-0 p-0">
                     <p class="m-0 fs-1 fw-bold">
                       <span id="countdown"></span>
@@ -255,8 +255,8 @@
                 </div>
 
                 <!-- Score -->
-                <div class="col-4 p-0">
-                  <div id="score-container" class="text-center d-flex justify-content-end m-0 p-0">
+                <div class="col-5 p-0">
+                  <div id="score-container" class="text-center d-flex justify-content-center m-0 p-0">
                     <p class="pe-1 fw-bold fs-3">
                       Score: <span id="score">0</span>/9
                       <!-- Use this to adjust score depending on outcome of game -->
