--- a/index.html
+++ b/index.html
@@ -235,13 +235,14 @@
             <!-- Computer Area -->
             <div id="computer-area" class="container-fluid p-0">
 
-              <div id="timer-score" class="row m-0 p-0">
+              <div id="turns-score" class="row m-0 p-0">
 
                 <!-- Timer -->
                 <div class="col-5 p-0">
-                  <div id="timer-container" class="text-center d-flex justify-content-center m-0 p-0">
-                    <p id="timer" class="bg-white rounded-bottom px-2 fs-3">01:00</p>
-                    <!-- Use this to adjust countdown timer after user has clicked Start button -->
+                  <div id="turns-container" class="text-center d-flex justify-content-start m-0 p-0">
+                    <p class="ps-1 p-0 m-0 fw-bold fs-6">
+											TURNS LEFT: <span id="turns" class="fs-3">18</span>
+										</p>
                   </div>
                 </div>
 
@@ -259,7 +260,6 @@
                   <div id="score-container" class="text-center d-flex justify-content-center m-0 p-0">
                     <p class="pe-1 fw-bold fs-3">
                       Score: <span id="score">0</span>/9
-                      <!-- Use this to adjust score depending on outcome of game -->
                     </p>
                   </div>
                 </div>
