feat: added an end-game div to display a GAME OVER message

--- a/index.html
+++ b/index.html
@@ -266,6 +266,13 @@
 
               </div>
 
+							<!-- End-Game Message -->
+							<div id="end-game" class="row m-0 p-0">
+								<p class="col text-center fw-bold m-0 p-0">
+									<span id="end-game-msg"></span>
+								</p>
+							</div>
+
               <!-- Computer Tiles -->
               <div class="row m-0 p-0">
                 <div class="col mx-auto my-2 p-0">
