feat: adjusted margin for score-container

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <!-- Score -->
                 <div class="col-5 p-0">
                   <div id="score-container" class="text-center d-flex justify-content-center m-0 p-0">
-                    <p class="pe-1 fw-bold fs-3">
+                    <p class="pe-1 mb-2 mb-sm-3 fw-bold fs-3">
                       Score: <span id="score">0</span>/9
                     </p>
                   </div>
