feat: adjusted instructions in modal and sidebar

--- a/index.html
+++ b/index.html
@@ -92,32 +92,32 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body text-justify">
-                      <p class="p-2">
-                        Before you begin, select a Difficulty Mode. The modes will change the amount of time the player
-                        has to guess the tiles. For example:
-                      </p>
-                      <ul>
-                        <li>Easy: 60 seconds</li>
-                        <li>Normal: 30 seconds</li>
-                        <li>Hard: 15 seconds</li>
-                      </ul>
-                      <p class="p-2">
-                        When you are ready, click 'Start' and a 10 second countdown timer will begin. At the start of the
-                        countdown timer, the computer tiles will appear - take this time to remember each tile and commit
-                        them to memory!
-                      </p>
-                      <p class="p-2">
-                        Once the 10 seconds are over, the computer tiles flip over and the player tiles appear. The game
-                        timer will then begin. Within this time, the player must click on a player tile at the bottom of
-                        the screen and match it with the correct computer tile.
-                      </p>
-                      <p class="p-2">
-                        The game will end once all tiles have been matched (or attempted to be matched!), or when the timer
-                        has run out. Your score will then be displayed in the top right corner of the game area.
-                      </p>
-                      <p class="p-2">
-                        If you'd like to reset the game at any point simply click the 'Reset' button. Happy gaming!
-                      </p>
+											<p class="p-2">
+													Before you begin, select a difficulty Mode. The mode will determine the number of turns the player
+													has to match the tiles. For example:
+											</p>
+											<ul>
+													<li>Easy: 18 turns</li>
+													<li>Normal: 14 turns</li>
+													<li>Hard: 9 turns</li>
+											</ul>
+											<p class="p-2">
+													When you are ready, click 'Start' and a 5 second countdown timer will begin. At the start of the
+													countdown timer, the computer tiles will appear - take this time to remember each tile and commit
+													them to memory!
+											</p>
+											<p class="p-2">
+													Once the 5 seconds are over, the computer tiles flip over and the player tiles appear. The game
+													will then begin. The player must click on a player tile at the bottom of
+													the screen and match it with the correct computer tile.
+											</p>
+											<p class="p-2">
+													The game will end once all tiles have been matched, or when the number of remaining turns reaches zero.
+													Your score will then be displayed in the top right corner of the game area.
+											</p>
+											<p class="p-2">
+													If you'd like to reset the game at any point simply click the 'Reset' button. Happy gaming!
+											</p>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
@@ -165,27 +165,27 @@
             
             <div id="instructions-text" class="border rounded w-100">
               <p class="p-2">
-                Before you begin, select a Difficulty Mode. The modes will change the amount of time the player
-                has to guess the tiles. For example:
+                Before you begin, select a difficulty Mode. The mode will determine the number of turns the player
+                has to match the tiles. For example:
               </p>
               <ul>
-                <li>Easy: 60 seconds</li>
-                <li>Normal: 30 seconds</li>
-                <li>Hard: 15 seconds</li>
+                <li>Easy: 18 turns</li>
+                <li>Normal: 14 turns</li>
+                <li>Hard: 9 turns</li>
               </ul>
               <p class="p-2">
-                When you are ready, click 'Start' and a 10 second countdown timer will begin. At the start of the 
+                When you are ready, click 'Start' and a 5 second countdown timer will begin. At the start of the 
                 countdown timer, the computer tiles will appear - take this time to remember each tile and commit
                 them to memory! 
               </p>
               <p class="p-2">
-                Once the 10 seconds are over, the computer tiles flip over and the player tiles appear. The game 
-                timer will then begin. Within this time, the player must click on a player tile at the bottom of 
+                Once the 5 seconds are over, the computer tiles flip over and the player tiles appear. The game 
+                will then begin. The player must click on a player tile at the bottom of 
                 the screen and match it with the correct computer tile. 
               </p>
               <p class="p-2">
-                The game will end once all tiles have been matched (or attempted to be matched!), or when the timer
-                has run out. Your score will then be displayed in the top right corner of the game area.
+                The game will end once all tiles have been matched, or when the number of remaining turns reaches zero.
+                Your score will then be displayed in the top right corner of the game area.
               </p>
               <p class="p-2">
                 If you'd like to reset the game at any point simply click the 'Reset' button. Happy gaming!
